# football-manager

./: .gitignore  .pre-commit-config.yaml  APP_README.md  CLAUDE.md  Dockerfile  LICENSE  README.md  auth.py  config.ini  config.py  db.py  deploy_hf.py  logic.py  main.py  migrate_all.py  migrate_attributes.py  migrate_auth.py  migrate_club_leagues_many_to_many.py  migrate_remove_league_id.py  migration.py  prek.toml  pyproject.toml  render.py  requirements.txt  styles.py  test_pitch_display.py
core/: __init__.py  auth.py  config.py  error_handling.py  exceptions.py  styles.py  validation.py
db/: __init__.py  club_leagues.py  clubs.py  connection.py  error_handling.py  leagues.py  match_events.py  match_players.py  match_recordings.py  match_teams.py  matches.py  players.py  settings.py  users.py
examples/: demo_players.py  team_sheet_example.md
logic/: __init__.py  allocation.py  import_logic.py  scoring.py  smart_import.py
migrations/: MIGRATION_2026_01_18_club_ids.md  README.md  __init__.py  migrate_all.py  migrate_auth.py  migrate_club_ids.py  migrate_club_leagues_many_to_many.py  migrate_remove_league_id.py  migration.py
render/: __init__.py  common.py  interactive_pitch.py  leagues.py  matches.py  pitch.py  players.py  public.py  settings.py
routes/: __init__.py  auth.py  clubs.py  home.py  leagues.py  matches.py  migration.py  players.py  public.py  settings.py  users.py
static/: manifest.json  service-worker.js
tests/: README.md  conftest.py  test_allocation.py  test_auth.py  test_auth_extended.py  test_club_leagues.py  test_club_selector.py  test_core_config.py  test_core_error_handling.py  (+30 more)
(+6 files in other folders)
